--- a/websiteStyleSheet.css
+++ b/websiteStyleSheet.css
@@ -23,10 +23,13 @@ body {
     text-align: center;
 }
 .images2 {
-	position: relative;
 	width: 90%;
 	height: auto;
 	text-align: center;
+}
+.appText {
+	padding: 20px 0px 0px 15px; 
+	font-weight: bold;
 }
 
 .images4 {
@@ -41,8 +44,10 @@ body {
 }
 .resButton {
 	display: inline-block;
-	font-size: 14px;
+	font-size: 16px;
 	line-height: 100%;
+	min-width: 160px; 
+	min-height: 30px;
 	color: #4385ef;
 	background-color: transparent;
 	border: 2px solid #4385ef;
@@ -62,5 +67,5 @@ body {
   .images2 {width: 85%; }
   .images3 { width: 50%; }
   .header { background-position: right bottom; font-size: 90%; }
-  .resButton { width: 100%; font-size: 90%; }
+  .resButton { width: 100%; font-size: 100%; }
 }
