--- a/websiteStyleSheet.css
+++ b/websiteStyleSheet.css
@@ -71,7 +71,7 @@ body {
 }
 @media only screen and (max-width:900px) { 
   .images { width: 137%; padding-left: 55px; }
-  .images2 {width: 85%; }
+  .images2 {width: 85%; padding-left: 27.5px;}
   .images3 { width: 30%; padding-left: 55px;}
   .header { background-position: right bottom; font-size: 90%;} 
   .resButton { width: 100%; font-size: 90%; margin-bottom: 5px;}
@@ -79,7 +79,7 @@ body {
 
 @media only screen and (max-width:480px) { 
   .images { width: 137%; padding-left: 0px;}
-  .images2 {width: 85%; }
+  .images2 {width: 85%; padding-left: 0px;}
   .images3 { width: 50%; padding-left: 0px;}
   .header { background-position: right bottom; font-size: 90%; }
   .resButton { width: 100%; font-size: 100%; margin-bottom: 5px;}
