--- a/websiteStyleSheet.css
+++ b/websiteStyleSheet.css
@@ -27,7 +27,7 @@ body {
     -webkit-transition: opacity 0.6s ease-in-out;
 }
 .images:hover {
-	opacity: 0.2;
+	opacity: 0.3;
     transition: opacity .4s ease-in-out;
     -moz-transition: opacity .4s ease-in-out;
     -webkit-transition: opacity .4s ease-in-out;
@@ -42,7 +42,7 @@ body {
     -webkit-transition: opacity 0.6s ease-in-out;
 }
 .images2:hover {
-	opacity: 0.2;
+	opacity: 0.3;
     transition: opacity .4s ease-in-out;
     -moz-transition: opacity .4s ease-in-out;
     -webkit-transition: opacity .4s ease-in-out;
@@ -63,7 +63,7 @@ body {
     -webkit-transition: opacity 0.6s ease-in-out;
 }
 .googleImage:hover {
-	opacity: 0.2;
+	opacity: 0.3;
     transition: opacity .4s ease-in-out;
     -moz-transition: opacity .4s ease-in-out;
     -webkit-transition: opacity .4s ease-in-out;
@@ -88,6 +88,19 @@ body {
 	background-color: #4385ef;
 	color: #FFF;
 }
+.mySlides {
+	opacity: 1.0;
+    transition: opacity 0.6s ease-in-out;
+    -moz-transition: opacity 0.6s ease-in-out;
+    -webkit-transition: opacity 0.6s ease-in-out;
+}
+.mySlides:hover {
+	opacity: 0.3;
+    transition: opacity .4s ease-in-out;
+    -moz-transition: opacity .4s ease-in-out;
+    -webkit-transition: opacity .4s ease-in-out;
+
+}
 @media only screen and (max-width:900px) { 
   .images { width: 137%; padding-left: 55px; }
   .images2 {width: 85%; padding-left: 27.5px;}
@@ -97,6 +110,7 @@ body {
 }
 
 @media only screen and (max-width:480px) { 
+  .mySlides {width: 100%; height: 220px;}
   .images { width: 137%; padding-left: 0px;}
   .images2 {width: 85%; padding-left: 0px;}
   .images3 { width: 50%; padding-left: 0px;}
