--- a/websiteStyleSheet.css
+++ b/websiteStyleSheet.css
@@ -85,17 +85,21 @@ i:hover {
 	background: #383A3B;
 	color: white;
 }
+.fa-calculator {
+  background: #383A3B;
+  color: white;
+}
 .resButton {
 	height: 125%;
-	width: 25%;
+	width: 30%;
 	font-size: 115%;
 }
 
 @media only screen and (max-width:1024px) { 
   .resButton { width: 100%; height: 125%; font-size: 115%;}
   .fa {	  padding: 25px;
-		  font-size: 50px !important;
-		  width: 100px;
+		  font-size: 40px !important;
+		  width: 90px;
 		  text-align: center;
 		  text-decoration: none;
 		  margin: 5px 2px;
